--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "build": "node build/build.js",
+    "start": "node server.js",
     "dev": "node build/dev-server.js",
-    "start": "node server.js"
+    "lint": "vue-cli-service lint"
+
   },
   "dependencies": {
     "express": "^4.16.3",
